updated title and some text

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Example app</title>
+  <title>p0sitive Code Collabrative</title>
   <meta name="description" content=""/>
   <link href="css/styles.css" rel="stylesheet">
   <link href="css/gradients.css" rel="stylesheet">
@@ -52,7 +52,7 @@
       <a class="twitter-link" href="http://twitter.com/home/?status=I just hosted a website on AWS!"><img src="img/tweet.svg" /></a>
       <div class="text">
         <h1>Congratulations!</h1>
-        <h2>You just hosted a website on AWS.</h2>
+        <h2>You just found my website on AWS.</h2>
       </div>
     </div>
     <div class="push"></div>
